--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "next": "^12.0.7",
+    "node-fetch": "^3.2.0",
+    "protobufjs": "^6.11.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "snappyjs": "^0.6.1"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0"
